depvar 0 and 3 run, 1, 2 fail